--- a/index.html
+++ b/index.html
@@ -26,6 +26,44 @@
             </ul>
         </nav>
         <div class="banner"></div>
-    </section>  
+    </section>
+    <section class="about" id="about-js">
+        <div class="content">
+            <div>
+                <h1>Salut! je suis <span class="title-color">CapiCode</span> et je suis un autodidacte en <span
+                        class="border-row" id="row"></span></h1>
+            </div>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odit aspernatur nobis? Ea
+                    aspernatur ex placeat impedit quod vitae laborum sit quia reiciendis iure tempore minus animi
+                    aliquam, unde hic laudantium illo ad fugit inventore optio suscipit iste dolor aut! Voluptate,
+                    aliquid placeat harum facere, quos odio error, obcaecati iure laudantium fugiat similique
+                    praesentium eum animi asperiores sed. Fugit illo architecto soluta eveniet consectetur quos id
+                    voluptatem? Maxime quasi dolorem obcaecati, minus magni fugiat enim et optio similique illum eveniet
+                    nam! Error iure eveniet iusto fugit aliquam illo tempore, officia quidem amet provident magni
+                    dolorum voluptatibus eum nihil? Corrupti commodi, possimus eius facere inventore perspiciatis
+                    dolores quaerat veniam aliquam accusantium cumque ut deleniti ipsum. Repudiandae laudantium voluptas
+                    quasi maxime aut labore in beatae rerum! Blanditiis, nemo! Voluptatibus voluptatum nesciunt vitae
+                    debitis? Culpa nihil molestiae delectus, quod dolor dolores excepturi veritatis quaerat, fugiat ex
+                </p>
+            </div>
+            <div class="box-social">
+                <div><img src="img/github.svg" alt=""></div>
+                <div><img src="img/linkedin.svg" alt=""></div>
+            </div>
+            <div class="btn-apropos">
+                <a href="CV/CV _Giovanni_CHARLES-EDOUARD.pdf" target="_blank">Voir mon cv</a>
+                <a>Consultez mes projets</a>
+            </div>
+        </div>
+        <div class="illustration-apropos">
+            <img src="img/webdeveloper.svg" alt="illustration">
+        </div>
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
