--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
         <div class="banner"></div>
     </section>
-    <section class="about" id="about-js">
+    <section class="about" id="about">
         <div class="content">
             <div>
                 <h1>Salut! je suis <span class="title-color">CapiCode</span> et je suis un autodidacte en <span
@@ -52,7 +52,7 @@
                 <div><img src="img/github.svg" alt=""></div>
                 <div><img src="img/linkedin.svg" alt=""></div>
             </div>
-            <div class="btn-apropos">
+            <div class="btn-about">
                 <a href="CV/CV _Giovanni_CHARLES-EDOUARD.pdf" target="_blank">Voir mon cv</a>
                 <a>Consultez mes projets</a>
             </div>
