Update about section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section class="home">
         <nav role="navigation">
-            <ul class="menu">
+            <ul class="menu" id="menu">
                 <li><a href="#about">À propos</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#realisations">Réalisations</a></li>
@@ -30,31 +30,34 @@
     <section class="about" id="about">
         <div class="content">
             <div>
-                <h1>Salut! je suis <span class="title-color">CapiCode</span> et je suis un autodidacte en <span
+                <h1>Salut! Je suis <span class="title-color">CapiCode</span>👻 Autodidacte en développement <span
                         class="border-row" id="row"></span></h1>
             </div>
             <div>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odit aspernatur nobis? Ea
-                    aspernatur ex placeat impedit quod vitae laborum sit quia reiciendis iure tempore minus animi
-                    aliquam, unde hic laudantium illo ad fugit inventore optio suscipit iste dolor aut! Voluptate,
-                    aliquid placeat harum facere, quos odio error, obcaecati iure laudantium fugiat similique
-                    praesentium eum animi asperiores sed. Fugit illo architecto soluta eveniet consectetur quos id
-                    voluptatem? Maxime quasi dolorem obcaecati, minus magni fugiat enim et optio similique illum eveniet
-                    nam! Error iure eveniet iusto fugit aliquam illo tempore, officia quidem amet provident magni
-                    dolorum voluptatibus eum nihil? Corrupti commodi, possimus eius facere inventore perspiciatis
-                    dolores quaerat veniam aliquam accusantium cumque ut deleniti ipsum. Repudiandae laudantium voluptas
-                    quasi maxime aut labore in beatae rerum! Blanditiis, nemo! Voluptatibus voluptatum nesciunt vitae
-                    debitis? Culpa nihil molestiae delectus, quod dolor dolores excepturi veritatis quaerat, fugiat ex
+                    Fasciné par les <span class="highlith">nouvelles technologies</span> de manière générale et plus
+                    particulièrement de
+                    développement.
+                    Tombé par hasard dans <span class="highlith">l'univers du code</span>, j'ai commencé par créer des
+                    morceaux de codes par curiosité
+                    et aujourd'hui je réalise avec passion de <span class="highlith">fines créations</span> et depuis
+                    peu de légères applications
+                    mobile pour donner vie à mes idées.
+                    Actuellement, je suis en formation de <span class="highlith">Technicien Développeur</span> en
+                    apprentissage pour 2 ans.
+                    Ce parcours m'attire particulièrement car il offre des cours axés sur la <span
+                        class="highlith">conception web</span> et <span class="highlith">mobile</span>.
+                    J'adore apprendre de mon côté de façon à rester en veille permanente, chose particulièrement
+                    importante dans le monde de l'informatique car tout évolue très rapidement !
                 </p>
             </div>
             <div class="box-social">
-                <div><img src="img/github.svg" alt=""></div>
-                <div><img src="img/linkedin.svg" alt=""></div>
+                <div><img src="img/github.svg" alt=""><span class="logo-github">Github</span></div>
+                <div><img src="img/linkedin.svg" alt=""><span class="logo-linkedin">LinkedIn</span></div>
             </div>
             <div class="btn-about">
-                <a href="CV/CV _Giovanni_CHARLES-EDOUARD.pdf" target="_blank">Voir mon cv</a>
-                <a>Consultez mes projets</a>
+                <a href="CV/CV _Giovanni_CHARLES-EDOUARD.pdf" target="_blank">Voir mon CV ⇢</a>
+                <a>Consultez mes projets ⇢</a>
             </div>
         </div>
         <div class="illustration-apropos">
