Implementation skills section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav role="navigation">
             <ul class="menu" id="menu">
                 <li><a href="#about">À propos</a></li>
-                <li><a href="#competences">Compétences</a></li>
+                <li><a href="#skill">Compétences</a></li>
                 <li><a href="#realisations">Réalisations</a></li>
                 <li><a href="#footer">Contact</a></li>
             </ul>
@@ -61,10 +61,14 @@
             </div>
         </div>
         <div class="illustration-apropos">
-            <img src="img/webdeveloper.svg" alt="illustration">
+            <img src="img/online.svg" alt="illustration">
         </div>
     </section>
+    <section class="skill" id="skill">
+        <div class="content-skill">
 
+        </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="app.js"></script>
 </body>
