--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     et aujourd'hui je réalise avec passion de <span class="highlith">fines créations</span> et depuis
                     peu de légères applications
                     mobile pour donner vie à mes idées.
-                    Actuellement, je suis en formation de <span class="highlith">Technicien Développeur</span> en
+                    Aujourd'hui, je suis en formation de <span class="highlith">Technicien Développeur</span> en
                     apprentissage pour 2 ans.
                     Ce parcours m'attire particulièrement car il offre des cours axés sur la <span
                         class="highlith">conception web</span> et <span class="highlith">mobile</span>.
@@ -60,14 +60,45 @@
                 <a>Consultez mes projets ⇢</a>
             </div>
         </div>
-        <div class="illustration-apropos">
+        <div class="illustration-about">
             <img src="img/online.svg" alt="illustration">
         </div>
     </section>
     <section class="skill" id="skill">
         <div class="content-skill">
-
+            <div><h1>Compétences</h1></div>
+            <!-- <hr> -->
+            <div class="box-skill">
+                <div class="row">
+                    <div class="skill-front">
+                    <div><h3>📚 Front-End</h3></div>
+                    <div><p>HTML 5</p></div>
+                    <div><p>CSS 3</p></div>
+                    <div><p>Javascript</p></div>
+                </div>
+                <div class="skill-back">
+                        <div><h3>📚 Back-End</h3></div>
+                        <div><p>C#</p></div>
+                    </div>
+                </div>
+                <div class="row2">
+                    <div class="skill-framework">
+                        <div><h3>⚗️ Frameworks</h3></div>
+                        <div><p>Bootstrap</p></div>
+                </div>
+                <div class="skill-tool">
+                        <div><h3>🛠️ Outils</h3></div>
+                        <div><p>Filezila</p></div>
+                        <div><p>Git</p></div>
+                        <div><p>Github</p></div>
+                        <div><p>Adobe XD</p></div>
+                </div>
+                </div>
+            </div>
         </div>
+        <div class="illustration-skill">
+                <img src="img/skill.svg" alt="skill">
+            </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="app.js"></script>
