--- a/index.html
+++ b/index.html
@@ -66,39 +66,72 @@
     </section>
     <section class="skill" id="skill">
         <div class="content-skill">
-            <div><h1>Compétences</h1></div>
+            <div>
+                <h1>Compétences</h1>
+            </div>
             <!-- <hr> -->
             <div class="box-skill">
                 <div class="row">
                     <div class="skill-front">
-                    <div><h3>📚 Front-End</h3></div>
-                    <div><p>HTML 5</p></div>
-                    <div><p>CSS 3</p></div>
-                    <div><p>Javascript</p></div>
-                </div>
-                <div class="skill-back">
-                        <div><h3>📚 Back-End</h3></div>
-                        <div><p>C#</p></div>
+                        <div>
+                            <h3>📚 Front-End</h3>
+                        </div>
+                        <div>
+                            <img src="img/skill/html.svg" alt="Ttml">
+                            <p>HTML</p>
+                        </div>
+                        <div>
+                            <img src="img/skill/css.svg" alt="Css">
+                            <p>CSS</p>
+                        </div>
+                        <div>
+                            <img src="img/skill/javascript.svg" alt="Javascript">
+                            <p>Javascript</p>
+                        </div>
+                    </div>
+                    <div class="skill-back">
+                        <div>
+                            <h3>📚 Back-End</h3>
+                        </div>
+                        <div>
+                            <img src="img/skill/c_sharp.svg" alt="C#">
+                            <p>C#</p>
+                        </div>
                     </div>
                 </div>
                 <div class="row2">
                     <div class="skill-framework">
-                        <div><h3>⚗️ Frameworks</h3></div>
-                        <div><p>Bootstrap</p></div>
-                </div>
-                <div class="skill-tool">
-                        <div><h3>🛠️ Outils</h3></div>
-                        <div><p>Filezila</p></div>
-                        <div><p>Git</p></div>
-                        <div><p>Github</p></div>
-                        <div><p>Adobe XD</p></div>
-                </div>
+                        <div>
+                            <h3>⚗️ Framework</h3>
+                        </div>
+                        <div>
+                            <img src="img/skill/boostrap.svg" alt="Bootstrap">
+                            <p>Bootstrap</p>
+                        </div>
+                    </div>
+                    <div class="skill-tool">
+                        <div>
+                            <h3>🛠️ Outils</h3>
+                        </div>
+                        <div>
+                            <img src="img/skill/git.svg" alt="Git">
+                            <p>Git</p>
+                        </div>
+                        <div>
+                            <img src="img/skill/github.svg" alt="Github">
+                            <p>Github</p>
+                        </div>
+                        <div>
+                            <img src="img/skill/adobexd.svg" alt="BooAdobe XDt">
+                            <p>Adobe XD</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="illustration-skill">
-                <img src="img/skill.svg" alt="skill">
-            </div>
+            <img src="img/skill.svg" alt="skill">
+        </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="app.js"></script>
