--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="box-social">
                 <div><img src="img/github.svg" alt=""><span class="logo-github">Github</span></div>
-                <div><img src="img/linkedin.svg" alt=""><span class="logo-linkedin">LinkedIn</span></div>
+                <div><a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank"><img src="img/linkedin.svg" alt=""></a><span class="logo-linkedin">LinkedIn</span></div>
             </div>
             <div class="btn-about">
                 <a href="CV/CV _Giovanni_CHARLES-EDOUARD.pdf" target="_blank">Voir mon CV ⇢</a>
