--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
             <div>
                 <h1>Compétences</h1>
             </div>
-            <!-- <hr> -->
             <div class="box-skill">
                 <div class="row">
                     <div class="skill-front">
@@ -77,7 +76,7 @@
                             <h3>📚 Front-End</h3>
                         </div>
                         <div>
-                            <img src="img/skill/html.svg" alt="Ttml">
+                            <img src="img/skill/html.svg" alt="Html">
                             <p>HTML</p>
                         </div>
                         <div>
@@ -108,6 +107,10 @@
                             <img src="img/skill/boostrap.svg" alt="Bootstrap">
                             <p>Bootstrap</p>
                         </div>
+                        <div>
+                            <img src="img/skill/xamarin.svg" alt="Xamarin">
+                            <p>Xamarin</p>
+                        </div>
                     </div>
                     <div class="skill-tool">
                         <div>
@@ -122,7 +125,7 @@
                             <p>Github</p>
                         </div>
                         <div>
-                            <img src="img/skill/adobexd.svg" alt="BooAdobe XDt">
+                            <img src="img/skill/adobexd.svg" alt="Adobe XD">
                             <p>Adobe XD</p>
                         </div>
                     </div>
