--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="menu" id="menu">
                 <li><a href="#about">À propos</a></li>
                 <li><a href="#skill">Compétences</a></li>
-                <li><a href="project.html">Réalisations</a></li>
+                <li><a href="#project">Réalisations</a></li>
                 <li><a href="#footer">Contact</a></li>
             </ul>
         </nav>
