--- a/project.html
+++ b/project.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <title>CapiCode</title>
 </head>
+
 <body>
-        <header>
-                <p>Site en cours d'élaboration</p>
-            </header>
-            <section class="home">
-                <nav role="navigation">
-                    <ul class="menu" id="menu">
-                        <li><a href="index.html">À propos</a></li>
-                        <li><a href="index.html">Compétences</a></li>
-                        <li><a href="#realisations">Réalisations</a></li>
-                        <li><a href="#footer">Contact</a></li>
-                    </ul>
-                </nav>
-            </section>
-            <section class="project" id="project">
-                <div class="content-project">
-                    <div>
-                        <h1>Réalisations</h1>
-                    </div>
+    <header>
+        <p>Site en cours d'élaboration</p>
+    </header>
+    <section class="home">
+        <nav role="navigation">
+            <ul class="menu" id="menu">
+                <li><a href="index.html">À propos</a></li>
+                <li><a href="index.html">Compétences</a></li>
+                <li><a href="#realisations">Réalisations</a></li>
+                <li><a href="#footer">Contact</a></li>
+            </ul>
+        </nav>
+    </section>
+    <section class="project" id="project">
+        <div class="project-portfolio">
+            <div class="content-project">
+                    <h3>Portfolio personnel</h3>
+                    <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui vel repellendus modi voluptate
+                        repudiandae nam atque dolorem possimus maxime dolore fugit distinctio sit quod quisquam enim,
+                        fugiat quaerat? Debitis atque architecto doloribus fugit nemo esse explicabo aperiam unde autem.
+                        nulla dolorem illo cum obcaecati quos voluptas corporis velit dignissimos?</p>
+                <div class="box-stack">
+                    <p class="highlith">HTML</p>
+                    <p class="highlith">CSS</p>
+                    <p class="highlith">Javascript</p>
                 </div>
-                <div class="box-project">
-                    
+                <div class="box-link">
+                    <img src="img/project/merge.png" class="merge" alt="Source">
+                    <a href="" class="btn-project">Voir la Source ⇢</a>
+                    <img src="img/project/worldwide.svg" class="web" alt="Website">
+                    <a href="" class="btn-project">Visiter ⇢</a>
                 </div>
-            </section>
+            </div>
+            <div class="illustration-project">
+                <img src="img/project/html.jpg" alt="Portfolio">
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
