--- a/project.html
+++ b/project.html
@@ -33,15 +33,15 @@
                         fugiat quaerat? Debitis atque architecto doloribus fugit nemo esse explicabo aperiam unde autem.
                         nulla dolorem illo cum obcaecati quos voluptas corporis velit dignissimos?</p>
                 <div class="box-stack">
-                    <p class="highlith">HTML</p>
-                    <p class="highlith">CSS</p>
-                    <p class="highlith">Javascript</p>
+                    <p class="highlith-stack">HTML</p>
+                    <p class="highlith-stack">CSS</p>
+                    <p class="highlith-stack">Javascript</p>
                 </div>
                 <div class="box-link">
-                    <img src="img/project/merge.png" class="merge" alt="Source">
-                    <a href="" class="btn-project">Voir la Source ⇢</a>
-                    <img src="img/project/worldwide.svg" class="web" alt="Website">
-                    <a href="" class="btn-project">Visiter ⇢</a>
+                    <img src="img/project/merge.png" class="icon-merge" alt="Source">
+                    <a href="https://github.com/CapiCode/capicode.github.io" class="btn-project" target="_blank">Voir la Source ⇢</a>
+                    <img src="img/project/world.png" class="icon-world" alt="Website">
+                    <a href="https://capicode.github.io/" class="btn-project" target="_blank">Visiter ⇢</a>
                 </div>
             </div>
             <div class="illustration-project">
