--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
             <ul class="menu" id="menu">
                 <li><a href="index.html">À propos</a></li>
                 <li><a href="index.html">Compétences</a></li>
-                <li><a href="#realisations">Réalisations</a></li>
+                <li><a href="project.html">Réalisations</a></li>
                 <li><a href="#footer">Contact</a></li>
             </ul>
         </nav>
