Add picture portfolio

--- a/project.html
+++ b/project.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="illustration-project">
-                <img src="img/project/html.jpg" alt="Portfolio">
+                <img src="img/project/portfolio.png" alt="Portfolio">
             </div>
         </div>
     </section>
