--- a/project.html
+++ b/project.html
@@ -28,10 +28,9 @@
         <div class="project-portfolio">
             <div class="content-project">
                     <h3>Portfolio personnel</h3>
-                    <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui vel repellendus modi voluptate
-                        repudiandae nam atque dolorem possimus maxime dolore fugit distinctio sit quod quisquam enim,
-                        fugiat quaerat? Debitis atque architecto doloribus fugit nemo esse explicabo aperiam unde autem.
-                        nulla dolorem illo cum obcaecati quos voluptas corporis velit dignissimos?</p>
+                    <p class="desc">Dans ce premier projet, j'ai réalisé un portfolio pour mettre en valeur mes compétences ainsi que l'étendu des mes travaux.
+                        L'interface utilisateur exploite principalement le standard CSS3 (Flexbox), les îcones (Icon8) et la librairie (ScrollReveal).
+                    </p>
                 <div class="box-stack">
                     <p class="highlith-stack">HTML</p>
                     <p class="highlith-stack">CSS</p>
@@ -41,11 +40,11 @@
                     <img src="img/project/merge.png" class="icon-merge" alt="Source">
                     <a href="https://github.com/CapiCode/capicode.github.io" class="btn-project" target="_blank">Voir la Source ⇢</a>
                     <img src="img/project/world.png" class="icon-world" alt="Website">
-                    <a href="https://capicode.github.io/" class="btn-project" target="_blank">Visiter ⇢</a>
+                    <a href="https://capicode.github.io/" class="btn-project">Visiter ⇢</a>
                 </div>
             </div>
             <div class="illustration-project">
-                <img src="img/project/portfolio.png" alt="Portfolio">
+                <img src="img/project/portfolio.PNG" alt="">
             </div>
         </div>
     </section>
