Add picture logo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </header>
     <section class="home">
         <nav role="navigation">
+            <div class="logo">
+                <img src="img/capi.svg" alt="logo">
+            </div>
             <ul class="menu" id="menu">
                 <li><a href="#about">À propos</a></li>
                 <li><a href="#skill">Compétences</a></li>
