--- a/index.html
+++ b/index.html
@@ -187,11 +187,10 @@
                     <div><p>Metz</p></div>
                 </div>
             </div>
-            <div class="contact-infos">
+            <!-- <div class="contact-infos">
                 <h3>CapiCode</h3>
                 <p>Autodidacte en développement web</p>
-            </div>
-            
+            </div> -->
         </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
