--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="illustration-project">
-                    <img src="img/project/portfolio.PNG" alt="">
+                    <img src="img/project/portfolio.png" alt="">
                 </div>
             </div>
         </div>
