--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#about">À propos</a></li>
                 <li><a href="#skill">Compétences</a></li>
                 <li><a href="#project">Réalisations</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Contactez-moi</a></li>
             </ul>
         </nav>
         <div class="banner"></div>
@@ -56,8 +56,8 @@
             </div>
             <div class="box-social">
                 <div><img src="img/github.svg" alt=""><span class="logo-github">Github</span></div>
-                <div><a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank"><img
-                            src="img/linkedin.svg" alt=""></a><span class="logo-linkedin">LinkedIn</span></div>
+                <div><a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank">
+                    <img src="img/linkedin.svg" alt=""></a><span class="logo-linkedin">LinkedIn</span></div>
             </div>
             <div class="btn-about">
                 <a href="CV/CV _Giovanni_CHARLES-EDOUARD.pdf" target="_blank">Voir mon CV ⇢</a>
@@ -175,7 +175,18 @@
     <section class="contact" id="contact">
         <div class="content-contact">
             <div class="contact-title">
-                <h1>Contact</h1>
+                <h1>Contactez-moi</h1>
+            </div>
+            <div class="contact-header">
+                <div class="contact-header-title">
+                    <h3>Une question ?</h3>
+                </div>
+                <div class="contact-header-intro">
+                    <p>Vous pouvez me contacter pour tout renseignements ou simplement pour discuter!</p>
+                </div>
+                <div class="contact-button">
+                    <a href="#">Contact ⇢</a>
+                </div>
             </div>
             <div class="contact-box">
                 <div class="box-mail">
@@ -187,10 +198,13 @@
                     <div><p>Metz</p></div>
                 </div>
             </div>
-            <!-- <div class="contact-infos">
-                <h3>CapiCode</h3>
-                <p>Autodidacte en développement web</p>
-            </div> -->
+            <div class="contact-social">
+                <div><img src="img/contact/github.svg" alt="Github" class="contact-github"></div>
+                <div><img src="img/contact/linkedin.svg" alt="LinkedIn" class="contact-linkedin"></div>
+            </div>
+            <div class="contact-infos">
+                <p>© 2019 | Tous droits réservés.</p>
+            </div> 
         </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
