--- a/index.html
+++ b/index.html
@@ -55,9 +55,16 @@
                 </p>
             </div>
             <div class="box-social">
-                <div><img src="img/github.svg" alt=""><span class="logo-github">Github</span></div>
-                <div><a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank">
-                    <img src="img/linkedin.svg" alt=""></a><span class="logo-linkedin">LinkedIn</span></div>
+                    <div>
+                        <a href="https://github.com/CapiCode" target="_blank">
+                        <img src="img/github.svg" alt=""></a>
+                        <span class="logo-github">Github</span>
+                    </div>
+                <div>
+                    <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank">
+                        <img src="img/linkedin.svg" alt=""></a>
+                        <span class="logo-linkedin">LinkedIn</span>
+                    </div>
             </div>
             <div class="btn-about">
                 <a href="CV/CV _Giovanni_CHARLES-EDOUARD.pdf" target="_blank">Voir mon CV ⇢</a>
@@ -148,7 +155,8 @@
             <div class="project-portfolio">
                 <div class="content-project">
                     <h3>Portfolio personnel</h3>
-                    <p class="desc">Ce premier projet est un portfolio que j'ai réalisé un portfolio pour mettre en valeur mes
+                    <p class="desc">Ce premier projet est un portfolio que j'ai réalisé un portfolio pour mettre en
+                        valeur mes
                         compétences ainsi que l'étendu de mes travaux.
                         L'interface utilisateur exploite principalement le standard CSS3 (Flexbox), les îcones (Icon8)
                         et la librairie (ScrollReveal).
@@ -173,40 +181,57 @@
         </div>
     </section>
     <section class="contact" id="contact">
+        <div class="contact-title">
+            <h1>Contactez-moi</h1>
+        </div>
         <div class="content-contact">
-            <div class="contact-title">
-                <h1>Contactez-moi</h1>
-            </div>
             <div class="contact-header">
                 <div class="contact-header-title">
-                    <h3>Une question ?</h3>
+                    <h3>Une information ? Une question ?</h3>
                 </div>
                 <div class="contact-header-intro">
-                    <p>Vous pouvez me contacter pour tout renseignements ou simplement pour discuter!</p>
+                    <p>Vous pouvez me contacter pour tout renseignements, que ce soit pour une proposition de
+                        collaboration ou simplement pour discuter!</p>
                 </div>
                 <div class="contact-button">
                     <a href="#">Contact ⇢</a>
                 </div>
             </div>
-            <div class="contact-box">
-                <div class="box-mail">
-                    <div><img src="img/contact/email.svg" alt=""></div>
-                    <div><p>g.edouardc@gmail.com</p></div>
+            <div class="contact-illustration">
+                <img src="img/contact/as.svg" alt="">
+            </div>
+        </div>
+        <div class="contact-box">
+            <div class="contact-coordinates">
+                <h3>Coordonnées</h3>
+            </div>
+            <div class="box-mail">
+                <div><img src="img/contact/email.svg" alt=""></div>
+                <div>
+                    <p>g.edouardc@gmail.com</p>
                 </div>
-                <div class="box-location">
-                    <div><img src="img/contact/location.svg" alt=""></div>
-                    <div><p>Metz</p></div>
+            </div>
+            <div class="box-location">
+                <div><img src="img/contact/location.svg" alt=""></div>
+                <div>
+                    <p>57000 - Metz</p>
                 </div>
             </div>
             <div class="contact-social">
-                <div><img src="img/contact/github.svg" alt="Github" class="contact-github"></div>
-                <div><img src="img/contact/linkedin.svg" alt="LinkedIn" class="contact-linkedin"></div>
+                <div>
+                    <a href="https://github.com/CapiCode" target="_blank">
+                    <img src="img/contact/github.svg" alt="Github" class="contact-github"></a>
+                </div>
+                <div>
+                    <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank">
+                    <img src="img/contact/linkedin.svg" alt="LinkedIn" class="contact-linkedin"></a>
+                </div>
             </div>
-            <div class="contact-infos">
-                <p>© 2019 | Tous droits réservés.</p>
-            </div> 
         </div>
     </section>
+    <footer>
+            <p>© 2019 | CapiCode 👻 | Tous droits réservés.</p>
+        </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="libs/jquery/dist/jquery.js"></script>
     <script src="libs/scrollreveal/dist/scrollreveal.js"></script>
