Update link contact mail

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         collaboration ou simplement pour discuter!</p>
                 </div>
                 <div class="contact-button">
-                    <a href="#">Contact ⇢</a>
+                    <a href="mailto:g.edouardc@gmail.com">Contact ⇢</a>
                 </div>
             </div>
             <div class="contact-illustration">
