--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -23,35 +23,38 @@
             <div class="logo">
                 <a href="index.html"><img src="img/capi.svg" alt="logo"></a>
             </div>
-             <div class="menu" id="menu">
+            <div class="menu" id="menu">
                 <ul>
                     <li id="link-about"><a href="#about">À propos</a></li>
                     <li id="link-skill"><a href="#skill">Compétences</a></li>
                     <li id="link-project"><a href="#project">Réalisations</a></li>
                     <li id="link-contact"><a href="#contact">Contactez-moi</a></li>
                 </ul>
-            </div> 
+            </div>
         </nav>
+        <div class="hero-text">
+            <h1>Visualisez, mon aventure !</h1>
+        </div>
         <div class="banner">
-                <ul class="circles">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                </ul>
+            <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
     </section>
     <button id="btn-top">
         <img src="img/arrow.png" class="fas fa-angle-double-up logo-animated"></img>
     </button>
     <section class="about" id="about">
-        <div class="content">
+        <div class="about-content">
             <div>
                 <h1>Salut! Je suis <span class="title-color">CapiCode</span>👻 Autodidacte en développement
                     <span class="border-row" id="row"></span></h1>
