--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <title>CapiCode</title>
 </head>
 
@@ -24,7 +25,7 @@
                 <a href="index.html"><img src="img/capi.svg" alt="logo"></a>
             </div>
             <div class="menu" id="menu">
-                <ul>
+                <ul class="borderCenter">
                     <li id="link-about"><a href="#about">À propos</a></li>
                     <li id="link-skill"><a href="#skill">Compétences</a></li>
                     <li id="link-project"><a href="#project">Réalisations</a></li>
@@ -32,8 +33,10 @@
                 </ul>
             </div>
         </nav>
+        
         <div class="hero-text">
-            <h1>Visualisez, mon aventure !</h1>
+            <h1>Salut! <img src="img/hand.png" alt="Hand"></h1>
+            <h2>Bienvenue sur mon site web personnel <img src="img/globe.png" alt="Globe"></h2>
         </div>
         <div class="banner">
             <ul class="circles">
@@ -51,12 +54,12 @@
         </div>
     </section>
     <button id="btn-top">
-        <img src="img/arrow.png" class="fas fa-angle-double-up logo-animated"></img>
+        <div class="index"><img src="img/index.png" class="fas fa-angle-double-up logo-animated"></img></div>
     </button>
     <section class="about" id="about">
         <div class="about-content">
             <div>
-                <h1>Salut! Je suis <span class="title-color">CapiCode</span>👻 Autodidacte en développement
+                <h1>Je suis <span class="title-color">CapiCode</span>👻 Autodidacte en développement
                     <span class="border-row" id="row"></span></h1>
             </div>
             <div>
@@ -72,7 +75,7 @@
                     Aujourd'hui, je suis en formation de <span class="highlith">Technicien Développeur</span> en
                     apprentissage pour 2 ans.
                     Ce parcours m'attire particulièrement car il offre des cours axés sur la <span
-                        class="highlith">conception web</span> et <span class="highlith">mobile</span>.
+                        class="highlith">conception web</Salut> et <span class="highlith">mobile</span>.
                     J'adore apprendre de mon côté de façon à rester en veille permanente, chose particulièrement
                     importante dans le monde de l'informatique car tout évolue très rapidement !
                 </p>
@@ -100,9 +103,6 @@
     </section>
     <section class="skill" id="skill">
         <div class="content-skill">
-            <div>
-                <h1>Compétences</h1>
-            </div>
             <div class="box-skill">
                 <div class="row">
                     <div class="skill-front">
@@ -172,9 +172,6 @@
     </section>
     <section class="project" id="project">
         <div class="box-project">
-            <div class="project-title">
-                <h1>Réalisations</h1>
-            </div>
             <div class="project-portfolio">
                 <div class="content-project">
                     <h3>Portfolio personnel</h3>
@@ -205,9 +202,6 @@
         </div>
     </section>
     <section class="contact" id="contact">
-        <div class="contact-title">
-            <h1>Contactez-moi</h1>
-        </div>
         <div class="content-contact">
             <div class="contact-header">
                 <div class="contact-header-title">
@@ -244,7 +238,7 @@
         </div>
     </section>
     <footer>
-        <p>© 2019 | CapiCode 👻 | Tous droits réservés.</p>
+        <p>© 2019 | capicode.github.io 👻</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
