--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
@@ -35,7 +36,7 @@
         </nav>
         
         <div class="hero-text">
-            <h1>Salut! <img src="img/hand.png" alt="Hand"></h1>
+            <h1>Salut! <img src="img/hand.png" class="viber" alt="Hand"></h1>
             <h2>Bienvenue sur mon site web personnel <img src="img/globe.png" alt="Globe"></h2>
         </div>
         <div class="banner">
@@ -97,7 +98,7 @@
                 <a href="#project">Consultez mes projets ⇢</a>
             </div>
         </div>
-        <div class="illustration-about">
+        <div class="about-illustration">
             <img src="img/online.svg" alt="illustration">
         </div>
     </section>
@@ -166,7 +167,7 @@
                 </div>
             </div>
         </div>
-        <div class="illustration-skill">
+        <div class="skill-illustration">
             <img src="img/skill.svg" alt="skill">
         </div>
     </section>
@@ -242,8 +243,8 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="libs/scrollreveal/dist/scrollreveal.js"></script>
     <script src="app.js"></script>
-
 </body>
 
 </html>
