--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         compétences ainsi que l'étendu de mes travaux.
                         Celui-ci sera en constante évolution.
                         L'interface utilisateur exploite principalement le standard CSS3 (Flexbox), les îcones (Icon8)
-                        et la librairie (JQuery).
+                        et les librairies (jQuery, Scrollreveal).
                     </p>
                     <div class="box-stack">
                         <p class="highlith-stack">HTML</p>
@@ -204,7 +204,7 @@
         </div>
     </section>
     <section class="contact" id="contact">
-        <div class="content-contact">
+        <div class="contact-content">
             <div class="contact-header">
                 <div class="contact-header-title">
                     <h3>Une information ? Une question ?</h3>
@@ -220,21 +220,21 @@
             <div class="contact-illustration">
                 <img src="img/contact/as.svg" alt="">
             </div>
-        </div>
-        <div class="contact-box">
-            <div class="contact-coordinates">
-                <h3>Coordonnées</h3>
-            </div>
-            <div class="box-mail">
-                <div><img src="img/contact/email.svg" alt=""></div>
-                <div>
-                    <p>g.edouardc@gmail.com</p>
+            <div class="contact-box">
+                <div class="contact-coordinates">
+                    <h3>Coordonnées</h3>
                 </div>
-            </div>
-            <div class="box-location">
-                <div><img src="img/contact/location.svg" alt=""></div>
-                <div>
-                    <p>57000 - Metz</p>
+                <div class="box-mail">
+                    <div><img src="img/contact/email.svg" alt=""></div>
+                    <div>
+                        <p>g.edouardc@gmail.com</p>
+                    </div>
+                </div>
+                <div class="box-location">
+                    <div><img src="img/contact/location.svg" alt=""></div>
+                    <div>
+                        <p>57000 - Metz</p>
+                    </div>
                 </div>
             </div>
         </div>
