Add logo scroll top js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="home">
         <nav role="navigation">
             <div class="logo">
-                <a><img src="img/capi.svg" alt="logo"></a>
+                <a href="#"><img src="img/capi.svg" alt="logo" id="home"></img>
             </div>
             <div id="menuToggle">
 
@@ -28,7 +28,7 @@
                 <span></span>
 
                 <ul id="menu" class="border">
-                    <li id="link-about"><a href="#about">À Propos</a></li>
+                    <li id="link-about"><a href="#about">A Propos</a></li>
                     <li id="link-skill"><a href="#skill">Compétences</a></li>
                     <li id="link-project"><a href="#project">Réalisations</a></li>
                     <li id="link-contact"><a href="#contact">Contact</a></li>
