Change unit rem

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <li></li>
                 <li></li>
                 <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
         </div>
     </section>
@@ -74,8 +77,8 @@
                     Aujourd'hui, je suis en formation de <span class="highlith">Technicien Développeur</span> en
                     apprentissage pour 2 ans.
                     Ce parcours m'attire particulièrement car il offre des cours axés sur la <span
-                        class="highlith">conception web</Salut> et <span class="highlith">mobile</span>.
-                        J'adore apprendre de mon côté de façon à rester en veille permanente, chose particulièrement
+                        class="highlith">conception web</span> et <span class="highlith">mobile</span>.
+                        J'adore <span class="highlith">apprendre</span> de mon côté de façon à rester en <span class="highlith">veille permanente</span>, chose particulièrement
                         importante dans le monde de l'informatique car tout évolue très rapidement !
                 </p>
             </div>
@@ -83,17 +86,17 @@
                 <div>
                     <a href="https://github.com/CapiCode" target="_blank">
                         <img src="img/github.svg" alt="" class="logo-animated "></a>
-                    <span class="logo-github">Github</span>
+                    <span class="desc-github">Github</span>
                 </div>
                 <div>
                     <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank">
                         <img src="img/linkedin.svg" alt="" class="logo-animated "></a>
-                    <span class="logo-linkedin">LinkedIn</span>
+                    <span class="desc-linkedin">LinkedIn</span>
                 </div>
             </div>
             <div class="about-btn">
                 <a href="cv/CV_Giovanni_CHARLES-EDOUARD.pdf" target="_blank">Voir mon CV ⇢</a>
-                <a href="#project">Consultez mes projets ⇢</a>
+                <a href="#">Consultez mes projets ⇢</a>
             </div>
         </div>
         <div class="about-illustration">
