Add event click project button

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="about-btn">
                 <a href="cv/CV_Giovanni_CHARLES-EDOUARD.pdf" target="_blank">Voir mon CV ⇢</a>
-                <a href="#">Consultez mes projets ⇢</a>
+                <a href="#" id="see-project">Consultez mes projets ⇢</a>
             </div>
         </div>
         <div class="about-illustration">
