--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                             <h3>⚗️ Framework</h3>
                         </div>
                         <div>
-                            <img src="img/skill/boostrap.svg" alt="Bootstrap">
-                            <p>Bootstrap</p>
+                            <img src="img/skill/bulma.png" alt="Bulma" class="icon-bulma">
+                            <p>Bulma</p>
                         </div>
                         <div>
                             <img src="img/skill/xamarin.svg" alt="Xamarin">
