Change style button contact

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             <h1>Salut! <img src="img/hand.png" class="viber" alt="Hand"></h1>
             <h2>Bienvenue sur mon site web personnel <img src="img/globe.png" alt="Globe"></h2>
         </div>
+        <div class="hero-icon">
+                <a href="#" id="icon">
+                        <img src="img/arrow_bottom.svg" alt="Bottom" class="icon-arrow" >
+                    </a>
+        </div>
         <div class="banner">
             <ul class="circles">
                 <li></li>
