--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin:400,600,700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mq.css">
@@ -16,9 +17,9 @@
 <body>
 
     <section class="home">
-            <!-- <div class="logo">
+             <div class="logo">
                     <a href="#"><img src="img/capi.svg" alt="logo" id="logo-home"></img>
-                </div> -->
+                </div> 
         <nav id="navigation" class="border">
             <a href="#about" id="link-about" onclick="toggleNav()">A Propos</a>
             <a href="#skill" id="link-skill" onclick="toggleNav()">Compétences</a>
